--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id ="controls">
+        <h1>Etch a Sketch</h1>
+        <button id="clear">Clear</button>
+    </div>
         <container id="cells-grid">
         </container>
         <script src="script.js"></script>
